# tp0

./: CMakeLists.txt  Makefile  log.txt  tp0.config
Utils/: CMakeLists.txt
Utils/include/: filesUtilities.h  monitors-adm.h  serialize-adm.h  socket-adm.h
Utils/src/: filesUtilities.c  makefile  monitors-adm.c  serialize-adm.c  socket-adm.c
client/: CMakeLists.txt  Makefile
client/src/: client.c  utils.c
server/: CMakeLists.txt  Makefile
server/src/: server.c  utils.c
